--- a/src/main/resources/ec/edu/espol/proyectoed_g1/inicio.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/inicio.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22" fx:controller="controllers.InicioController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/22" fx:controller="ec.edu.espol.proyectoed_g1.InicioController">
    <children>
       <Text fill="#bf0000" layoutX="65.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido a CarMatch" textAlignment="CENTER" wrappingWidth="470.046875">
          <font>
