--- a/src/main/resources/ec/edu/espol/proyectoed_g1/crearVehiculo.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/crearVehiculo.fxml
@@ -4,12 +4,14 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -135,74 +137,96 @@
             </VBox>
                   <VBox alignment="CENTER" prefHeight="469.0" prefWidth="358.0">
                      <children>
-                        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="358.0" spacing="30.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
+                        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="358.0" spacing="20.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
                            <children>
-                              <VBox alignment="CENTER" prefHeight="110.0" prefWidth="358.0" spacing="10.0">
+                              <VBox alignment="CENTER" prefHeight="134.0" prefWidth="358.0" spacing="20.0">
                                  <children>
                                     <HBox alignment="CENTER" prefHeight="30.0" prefWidth="358.0" spacing="20.0">
                                        <children>
-                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¿Ha tenido algún accidente?" textAlignment="CENTER" wrappingWidth="213.11875915527344">
+                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¿Has tenido algún accidente? ¿Qué afectó?" textAlignment="CENTER" wrappingWidth="311.11875915527344">
                                              <font>
-                                                <Font name="Arial Rounded MT" size="14.0" />
+                                                <Font name="Arial Rounded MT Bold" size="14.0" />
                                              </font>
                                           </Text>
-                                          <CheckBox fx:id="checkAccidente" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#clickEnAccidente" prefHeight="28.0" prefWidth="19.0" textAlignment="CENTER" />
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0">
+                                    <HBox alignment="CENTER" prefHeight="189.0" prefWidth="358.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="59.0" prefWidth="14.0" style="-fx-background-color: e0252d; -fx-background-radius: 0;" textFill="WHITE">
-                                             <font>
-                                                <Font name="Arial Rounded MT Bold" size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <TextArea fx:id="taAccidente" disable="true" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="281.0" promptText="Describa su accidente y las reparaciones coreespondientes" />
+                                          <GridPane prefHeight="108.0" prefWidth="286.0">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="20.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                             <children>
+                                                <CheckBox fx:id="cCarroceria" mnemonicParsing="false" onAction="#clickEnCCarroceria" text="Carrocería" />
+                                                <CheckBox fx:id="cParachoques" mnemonicParsing="false" onAction="#clickEnCParachoques" text="Parachoques" GridPane.rowIndex="1" />
+                                                <CheckBox fx:id="cSuspension" mnemonicParsing="false" onAction="#clickEnCSuspension" prefHeight="36.0" prefWidth="175.0" text="Sistema de suspensión" GridPane.rowIndex="2" />
+                                                <CheckBox fx:id="cFarros" mnemonicParsing="false" onAction="#clickEnCFaros" text="Faros" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <CheckBox fx:id="cEscape" mnemonicParsing="false" onAction="#clickEnCbEscape" text="Sistema de escape" GridPane.columnIndex="1" />
+                                             </children>
+                                          </GridPane>
                                        </children>
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox alignment="CENTER" prefHeight="110.0" prefWidth="358.0" spacing="10.0">
+                              <VBox alignment="CENTER" prefHeight="134.0" prefWidth="358.0" spacing="20.0">
                                  <children>
                                     <HBox alignment="CENTER" prefHeight="30.0" prefWidth="358.0" spacing="20.0">
                                        <children>
-                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Procesos de mantenimiento" textAlignment="CENTER" wrappingWidth="213.11875915527344">
+                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mantenimiento de tu vehículo" textAlignment="CENTER" wrappingWidth="213.11875915527344">
                                              <font>
-                                                <Font name="Arial Rounded MT" size="14.0" />
+                                                <Font name="Arial Rounded MT Bold" size="14.0" />
                                              </font>
                                           </Text>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0">
+                                    <HBox alignment="CENTER" prefHeight="189.0" prefWidth="320.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="59.0" prefWidth="14.0" style="-fx-background-color: e0252d; -fx-background-radius: 0;" textFill="WHITE">
-                                             <font>
-                                                <Font name="Arial Rounded MT Bold" size="13.0" />
-                                             </font>
-                                          </Label>
-                                          <TextArea fx:id="taMantenimiento" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="281.0" promptText="Describa los procesos de mantenimiento" />
+                                          <GridPane prefHeight="98.0" prefWidth="285.0">
+                                             <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
+                                             </columnConstraints>
+                                             <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                             </rowConstraints>
+                                             <children>
+                                                <CheckBox fx:id="cAceite" mnemonicParsing="false" onAction="#clickEnCAceite" text="Aceite" />
+                                                <CheckBox fx:id="cFiltros" mnemonicParsing="false" onAction="#clickEnCFiltros" text="Filtros" GridPane.rowIndex="1" />
+                                                <CheckBox fx:id="cBateria" mnemonicParsing="false" onAction="#clickEnCBateria" prefHeight="36.0" prefWidth="175.0" text="Batería" GridPane.rowIndex="2" />
+                                                <CheckBox fx:id="cFrenos" mnemonicParsing="false" onAction="#clickEnCFrenos" text="Frenos" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <CheckBox fx:id="cNeumaticos" mnemonicParsing="false" onAction="#clickEnCNeumaticos" text="Neumáticos" GridPane.columnIndex="1" />
+                                             </children>
+                                          </GridPane>
                                        </children>
                                     </HBox>
                                  </children>
                               </VBox>
-                              <VBox alignment="CENTER" prefHeight="110.0" prefWidth="358.0" spacing="10.0">
+                              <VBox alignment="CENTER" prefHeight="74.0" prefWidth="358.0" spacing="20.0">
                                  <children>
-                                    <HBox alignment="CENTER" prefHeight="30.0" prefWidth="358.0" spacing="20.0">
+                                    <HBox alignment="CENTER" prefHeight="16.0" prefWidth="358.0" spacing="20.0">
                                        <children>
-                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Subir imagen" textAlignment="CENTER" wrappingWidth="213.11875915527344">
+                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Imágenes de tu vehículo" textAlignment="CENTER" wrappingWidth="213.11875915527344">
                                              <font>
-                                                <Font name="Arial Rounded MT" size="14.0" />
+                                                <Font name="Arial Rounded MT Bold" size="14.0" />
                                              </font>
                                           </Text>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0">
+                                    <HBox alignment="CENTER" prefHeight="47.0" prefWidth="358.0">
                                        <children>
-                                          <Label alignment="CENTER" prefHeight="59.0" prefWidth="14.0" style="-fx-background-color: e0252d; -fx-background-radius: 0;" textFill="WHITE">
+                                          <Button fx:id="botonSubirImagen" mnemonicParsing="false" onAction="#clickEnSubirImagen" prefHeight="39.0" prefWidth="288.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Subir imagen" textFill="WHITE">
                                              <font>
-                                                <Font name="Arial Rounded MT Bold" size="13.0" />
+                                                <Font name="Arial Rounded MT Bold" size="14.0" />
                                              </font>
-                                          </Label>
-                                          <TextArea maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="281.0" promptText="Describa los procesos de mantenimiento" />
+                                          </Button>
                                        </children>
                                     </HBox>
                                  </children>
@@ -211,20 +235,20 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="358.0" spacing="40.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
+                  <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="358.0" spacing="50.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
                      <children>
                         <HBox alignment="CENTER" prefHeight="35.0" prefWidth="358.0">
                            <children>
-                              <Text fill="#e0252d" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos de contacto" textAlignment="CENTER" wrappingWidth="213.11875915527344">
+                              <Text lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos de contacto" textAlignment="CENTER" wrappingWidth="213.11875915527344">
                                  <font>
                                     <Font name="Arial Rounded MT Bold" size="18.0" />
                                  </font>
                               </Text>
                            </children>
                         </HBox>
-                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                        <VBox alignment="CENTER" prefHeight="184.0" prefWidth="358.0" spacing="40.0">
                            <children>
-                              <HBox alignment="CENTER" prefHeight="71.0" prefWidth="358.0" spacing="20.0">
+                              <HBox alignment="CENTER" prefHeight="120.0" prefWidth="358.0" spacing="20.0">
                                  <children>
                                     <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="140.0">
                                        <children>
