--- a/src/main/resources/ec/edu/espol/proyectoed_g1/mantenimiento.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/mantenimiento.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.MantenimientoController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.MantenimientoController">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
@@ -35,7 +36,10 @@
                <Font name="Arial Rounded MT Bold" size="15.0" />
             </font>
          </Label>
-          <DatePicker fx:id="datePicker" editable="false" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" />
+          <DatePicker fx:id="datePicker" editable="false" style="-fx-background-color: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></DatePicker>
       </children>
    </VBox>
    <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="524.0" spacing="20.0">
@@ -52,10 +56,16 @@
         <Button fx:id="saveButton" onAction="#guardarMantenimiento" prefHeight="35.0" prefWidth="146.0" style="-fx-background-color: e0252d; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0); -fx-background-radius: 40;" text="Guardar" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
-         </font></Button>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
         <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#closePopup" prefHeight="35.0" prefWidth="146.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0); -fx-background-color: e0252d; -fx-background-radius: 40;" text="Cancelar" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
-         </font></Button>
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
     </HBox>
 </VBox>
