--- a/src/main/resources/ec/edu/espol/proyectoed_g1/verIndividualVehiculo.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/verIndividualVehiculo.fxml
@@ -26,7 +26,7 @@
                      <children>
                         <ImageView fx:id="imgLogo" fitHeight="66.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../ProyectoED-G1/src/main/resources/imagenes/logo.png" />
+                              <Image url="@../../../../imagenes/logo.png" />
                            </image>
                         </ImageView>
                         <Text fill="#e0252d" strokeType="OUTSIDE" strokeWidth="0.0" text="CarMatch" wrappingWidth="240.4574737548828">
@@ -59,7 +59,7 @@
                      <children>
                         <ImageView fx:id="ivUsuario" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../OneDrive-EscuelaSuperiorPolitécnicadelLitoral/ESPOL/PAOI%20-%202024/Estructuras%20de%20Datos/ProyectoED-G1/src/main/resources/imagenes/usuario.png" />
+                              <Image url="@../../../../imagenes/usuario.png" />
                            </image>
                         </ImageView>
                         <Label fx:id="lblNombreUsuario" text="Isabella Martin">
@@ -90,6 +90,23 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
+            <HBox alignment="CENTER" onDragDetected="#clickFavs" onMouseClicked="#clickFavs" prefHeight="22.0" prefWidth="272.0" spacing="15.0">
+               <children>
+                  <Text fx:id="favTxt" strokeType="OUTSIDE" strokeWidth="0.0" text="Agregar a Favoritos: ">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
+                     </font>
+                  </Text>
+                  <ImageView fx:id="imgHeart" fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../imagenes/corazon.png" />
+                     </image>
+                  </ImageView>
+               </children>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </HBox>
          </children>
       </VBox>
    </right>
