--- a/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaVehEdit.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaVehEdit.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="186.0" prefWidth="1180.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.PlantillaVehEditController">
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="186.0" prefWidth="1180.0" spacing="5.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.PlantillaVehEditController">
    <children>
       <ImageView fx:id="imgVeh" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../imagenes/default.png" />
          </image>
       </ImageView>
-      <VBox prefHeight="200.0" prefWidth="830.0" spacing="5.0">
+      <VBox prefHeight="186.0" prefWidth="781.0" spacing="5.0">
          <children>
             <Text fx:id="vehTitle" strokeType="OUTSIDE" strokeWidth="0.0" text="Chevrolet Spark">
                <VBox.margin>
@@ -92,7 +92,15 @@
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="btnEditar" mnemonicParsing="false" onMouseClicked="#clickEditar" prefHeight="43.0" prefWidth="68.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Editar" textFill="WHITE">
+      <Button fx:id="btnEditar" mnemonicParsing="false" onMouseClicked="#clickEditar" prefHeight="43.0" prefWidth="81.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Editar" textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="14.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="btnEliminar" mnemonicParsing="false" onMouseClicked="#clickEliminar" prefHeight="43.0" prefWidth="91.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Eliminar" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
