--- a/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaAuto_busVehiculo.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaAuto_busVehiculo.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="plantillaAutos" alignment="TOP_CENTER" prefHeight="257.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #DADADA; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0.6, 0, 0);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.PlantillaAuto_busVehiculoController">
+<VBox fx:id="plantillaAutos" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="198.0" prefWidth="182.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #DADADA; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0.6, 0, 0);" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ec.edu.espol.proyectoed_g1.PlantillaAuto_busVehiculoController">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <children>
-                        <ImageView fx:id="planImg" fitHeight="141.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="planImg" fitHeight="88.0" fitWidth="160.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../../imagenes/default-car.png" />
                            </image>
@@ -27,7 +27,7 @@
                            <children>
                               <Text fx:id="plantVehName" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre Auto">
                                  <font>
-                                    <Font name="Arial" size="14.0" />
+                                    <Font name="Arial" size="12.0" />
                                  </font>
                                  <VBox.margin>
                                     <Insets left="10.0" right="10.0" />
@@ -37,15 +37,21 @@
                                  <children>
                                     <Label fx:id="planVehAnio" style="-fx-border-color: #727272; -fx-border-radius: 3.5;" text="anio" textFill="#727272">
                                        <font>
-                                          <Font size="13.0" />
+                                          <Font size="11.0" />
                                        </font>
                      <padding>
                         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                      </padding>
                                     </Label>
-                                    <Text fx:id="planVehKm" fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="kms" />
+                                    <Text fx:id="planVehKm" fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="kms">
+                     <font>
+                        <Font size="11.0" />
+                     </font></Text>
                                     <Text fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="." />
-                                    <Text fx:id="planVehCiu" fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad" />
+                                    <Text fx:id="planVehCiu" fill="#727272" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad">
+                     <font>
+                        <Font size="11.0" />
+                     </font></Text>
                                  </children>
                                  <padding>
                                     <Insets bottom="1.5" top="1.5" />
@@ -58,13 +64,16 @@
                                  <VBox.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </VBox.margin>
+               <font>
+                  <Font size="11.0" />
+               </font>
                               </Text>
                               <Text fx:id="planVehPrecio" strokeType="OUTSIDE" strokeWidth="0.0" text="\$100000">
                                  <VBox.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </VBox.margin>
                                  <font>
-                                    <Font name="Arial Black" size="13.0" />
+                                    <Font name="Arial Black" size="11.0" />
                                  </font>
                               </Text>
                            </children>
