--- a/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaVehEdit.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/plantillaVehEdit.fxml
@@ -109,4 +109,7 @@
          </cursor>
       </Button>
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </HBox>
