--- a/src/main/resources/ec/edu/espol/proyectoed_g1/editarVehIndividual.fxml
+++ b/src/main/resources/ec/edu/espol/proyectoed_g1/editarVehIndividual.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -71,54 +72,102 @@
                      <children>
                         <VBox prefHeight="241.0" prefWidth="640.0" spacing="40.0">
                            <children>
-                              <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
-                                 <children>
-                                    <ComboBox fx:id="cbMarca" prefWidth="150.0" promptText="Marca" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                    <ComboBox fx:id="cbModelo" onMouseClicked="#clickEnModelo" prefWidth="150.0" promptText="Modelo" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
-                                 <children>
-                                          <ComboBox fx:id="cbAnio" prefWidth="150.0" promptText="Año" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                          <ComboBox fx:id="cbKilo" prefWidth="150.0" promptText="Kilometraje (km)" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                 </children>
-                              </HBox>
-                                    <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
                                        <children>
-                                          <ComboBox fx:id="cbMotor" prefWidth="150.0" promptText="Motor" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                    <ComboBox fx:id="cbTransmision" prefWidth="150.0" promptText="Transmisión" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" spacing="240.0">
+                                             <children>
+                                                <Label text="Marca" />
+                                                <Label text="Modelo" />
+                                             </children>
+                                          </HBox>
+                                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
+                                       <children>
+                                          <ComboBox fx:id="cbMarca" prefWidth="150.0" promptText="Marca" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                          <ComboBox fx:id="cbModelo" onMouseClicked="#clickEnModelo" prefWidth="150.0" promptText="Modelo" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
                                        </children>
                                     </HBox>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" spacing="200.0">
+                                             <children>
+                                                <Label text="Año" />
+                                                <Label text="Kilometraje (km)" />
+                                             </children>
+                                          </HBox>
                                     <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
                                        <children>
-                                          <ComboBox fx:id="cbPeso" prefWidth="150.0" promptText="Peso" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
-                                          <ComboBox fx:id="cbCiudad" prefWidth="150.0" promptText="Ciudad" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor></ComboBox>
+                                                <ComboBox fx:id="cbAnio" prefWidth="150.0" promptText="Año" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                                <ComboBox fx:id="cbKilo" prefWidth="150.0" promptText="Kilometraje (km)" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
                                        </children>
                                     </HBox>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" spacing="220.0">
+                                             <children>
+                                                <Label text="Motor" />
+                                                <Label text="Transimision" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
+                                             <children>
+                                                <ComboBox fx:id="cbMotor" prefWidth="150.0" promptText="Motor" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                          <ComboBox fx:id="cbTransmision" prefWidth="150.0" promptText="Transmisión" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" spacing="250.0">
+                                             <children>
+                                                <Label text="Peso" />
+                                                <Label text="Ciudad" />
+                                             </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="400.0" spacing="20.0">
+                                             <children>
+                                                <ComboBox fx:id="cbPeso" prefWidth="150.0" promptText="Peso" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                                <ComboBox fx:id="cbCiudad" prefWidth="150.0" promptText="Ciudad" style="-fx-background-color: #FFFF; -fx-border-color: #DADADA;">
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ComboBox>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                    </VBox>
                            </children>
                         </VBox>
                               <HBox alignment="CENTER" prefHeight="71.0" prefWidth="358.0" spacing="20.0">
@@ -170,21 +219,20 @@
             </VBox>
                   <VBox alignment="CENTER" prefHeight="469.0" prefWidth="358.0" spacing="1.0">
                      <children>
-                        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="358.0" spacing="20.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
+                        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="481.0" prefWidth="358.0" spacing="20.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
                            <children>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
                                     <VBox alignment="CENTER" prefHeight="154.0" prefWidth="358.0" spacing="25.0">
                                        <children>
-                                          <HBox alignment="CENTER" prefHeight="16.0" prefWidth="358.0" spacing="20.0">
-                                             <children>
-                                                <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Historial de Accidentes y Servicios" textAlignment="CENTER" wrappingWidth="319.11875915527344">
-                                                   <font>
-                                                      <Font name="Arial Rounded MT Bold" size="16.0" />
-                                                   </font>
-                                                </Text>
-                                             </children>
-                                          </HBox>
+                                          <Text fill="#070707" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Historial de Accidentes y Servicios" textAlignment="CENTER" wrappingWidth="319.11875915527344">
+                                             <font>
+                                                <Font name="Arial Rounded MT Bold" size="16.0" />
+                                             </font>
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </VBox.margin>
+                                          </Text>
                                           <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="57.0" prefWidth="358.0" spacing="30.0">
                                              <children>
                                                 <Button fx:id="btnAnadirReparacion" mnemonicParsing="false" onAction="#clickEnAnadirReparacion" prefHeight="50.0" prefWidth="135.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Añadir Reparación" textAlignment="CENTER" textFill="WHITE" wrapText="true">
@@ -258,10 +306,16 @@
                                              </children>
                                           </HBox>
                                        </children>
+                                       <HBox.margin>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets top="15.0" />
+                                       </padding>
                                     </VBox>
                                  </children>
                               </HBox>
-                              <VBox alignment="CENTER" prefHeight="251.0" prefWidth="358.0" spacing="20.0">
+                              <VBox alignment="CENTER" prefHeight="225.0" prefWidth="358.0" spacing="20.0">
                                  <children>
                                     <HBox alignment="CENTER" prefHeight="16.0" prefWidth="358.0" spacing="20.0">
                                        <children>
@@ -282,23 +336,25 @@
                                           <FlowPane fx:id="fpImagenes" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="276.0" style="-fx-background-color: #FFFFFF;" vgap="10.0" />
                                        </content>
                                     </ScrollPane>
-                                    <HBox alignment="CENTER" prefHeight="43.0" prefWidth="358.0" spacing="30.0">
-                                       <children>
-                                          <Button fx:id="botonSubirImagen" mnemonicParsing="false" onAction="#clickEnSubirImagen" prefHeight="38.0" prefWidth="288.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Subir imagen" textFill="WHITE">
-                                             <font>
-                                                <Font name="Arial Rounded MT Bold" size="14.0" />
-                                             </font>
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor>
-                                          </Button>
-                                       </children>
-                                    </HBox>
+                                    <Button fx:id="botonSubirImagen" mnemonicParsing="false" onAction="#clickEnSubirImagen" prefHeight="38.0" prefWidth="288.0" style="-fx-background-color: e0252d; -fx-background-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);" text="Subir imagen" textFill="WHITE">
+                                       <font>
+                                          <Font name="Arial Rounded MT Bold" size="14.0" />
+                                       </font>
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor>
+                                    </Button>
                                  </children>
+                                 <padding>
+                                    <Insets bottom="15.0" />
+                                 </padding>
                               </VBox>
                            </children>
                         </VBox>
                      </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </VBox>
                   <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="358.0" spacing="50.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 40; -fx-border-radius: 40; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 20, 0.6, 0, 0);">
                      <children>
